--- a/main.html
+++ b/main.html
@@ -7,6 +7,11 @@
 </head>
 
 <body>
+	<main id="job" class="accio" style="width:150px; height:150px; background-color:#000000;">
+		<p class="hello-accio" style="color:white; margin-left:32px; padding:10px;">
+			Hello Accio Job
+		</p>
+	</main>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
